--- a/dl__reader/views/views.xml
+++ b/dl__reader/views/views.xml
@@ -1,60 +1,14 @@
 <odoo>
   <data>
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="dl__reader.list">
-      <field name="name">DL_Reader list</field>
-      <field name="model">dl__reader.dl__reader</field>
+    <record id="res_partner_inherit" model="ir.ui.view">
+      <field name="name">res.partner.inherit</field>
+      <field name="model">res.partner</field>
+      <field name="inherit_id" ref=""/>
       <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
+        <button name="action_confirm" position="after">
+          <button name="test" string="test" type="object"/>
+        </button>
       </field>
     </record>
--->
-
-    <!-- actions opening views on models -->
-<!--
-    <record model="ir.actions.act_window" id="dl__reader.action_window">
-      <field name="name">DL_Reader window</field>
-      <field name="res_model">dl__reader.dl__reader</field>
-      <field name="view_mode">tree,form</field>
-    </record>
--->
-
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="dl__reader.action_server">
-      <field name="name">DL_Reader server</field>
-      <field name="model_id" ref="model_dl__reader_dl__reader"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
-
-    <!-- Top menu item -->
-<!--
-    <menuitem name="DL_Reader" id="dl__reader.menu_root"/>
--->
-    <!-- menu categories -->
-<!--
-    <menuitem name="Menu 1" id="dl__reader.menu_1" parent="dl__reader.menu_root"/>
-    <menuitem name="Menu 2" id="dl__reader.menu_2" parent="dl__reader.menu_root"/>
--->
-    <!-- actions -->
-<!--
-    <menuitem name="List" id="dl__reader.menu_1_list" parent="dl__reader.menu_1"
-              action="dl__reader.action_window"/>
-    <menuitem name="Server to list" id="dl__reader" parent="dl__reader.menu_2"
-              action="dl__reader.action_server"/>
--->
   </data>
 </odoo>
