--- a/dl__reader/views/views.xml
+++ b/dl__reader/views/views.xml
@@ -3,7 +3,7 @@
     <record id="res_partner_inherit" model="ir.ui.view">
       <field name="name">res.partner.inherit</field>
       <field name="model">res.partner</field>
-      <field name="inherit_id" ref=""/>
+      <field name="inherit_id" ref="base.view_partner_form"/>
       <field name="arch" type="xml">
         <button name="action_confirm" position="after">
           <button name="test" string="test" type="object"/>
