--- a/dl__reader/views/views.xml
+++ b/dl__reader/views/views.xml
@@ -5,9 +5,9 @@
       <field name="model">res.partner</field>
       <field name="inherit_id" ref="base.view_partner_form"/>
       <field name="arch" type="xml">
-        <button name="action_confirm" position="after">
+        <field name="vat" position="after">
           <button name="test" string="test" type="object"/>
-        </button>
+        </field>
       </field>
     </record>
   </data>
