--- a/dl__reader/wizards/scan_dl.xml
+++ b/dl__reader/wizards/scan_dl.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record id="scan_dl_form" model="ir.ui.view">
-        <field name="name">scan.dl.wizard</field>
-        <field name="model">scan.dl</field>
+        <field name="name">scan_dl.wizard</field>
+        <field name="model">scan_dl</field>
         <field name="arch" type="xml">
             <form string="Scan Drivers License">
                 <group>
@@ -21,7 +21,7 @@
     <record id="scan_dl_wizard" model="ir.actions.act_window">
         <field name="name">Scan Drivers License</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">scan.dl</field>
+        <field name="res_model">scan_dl</field>
         <field name="view_id" ref="scan_dl_form"/>
         <field name="target">new</field>
     </record>
