--- a/dl__reader/views/views.xml
+++ b/dl__reader/views/views.xml
@@ -6,9 +6,10 @@
       <field name="inherit_id" ref="base.view_partner_form"/>
       <field name="arch" type="xml">
         <field name="vat" position="after">
-          <button name="%(scan_dl.scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/>
+          <button name="confirm_action" string="Scan DL" type="object" class="btn-primary"/>
         </field>
       </field>
     </record>
   </data>
 </odoo>
+<!-- %(scan_dl.scan_dl_wizard)d -->
