--- a/dl__reader/views/views.xml
+++ b/dl__reader/views/views.xml
@@ -5,9 +5,11 @@
       <field name="model">res.partner</field>
       <field name="inherit_id" ref="base.view_partner_form"/>
       <field name="arch" type="xml">
-        <field name="vat" position="after">
+        <!-- <field name="vat" position="after"> -->
+        <header>
           <button name="%(scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/>
-        </field>
+        </header>
+        <!-- </field> -->
       </field>
     </record>
   </data>
