--- a/dl__reader/views/views.xml
+++ b/dl__reader/views/views.xml
@@ -5,11 +5,9 @@
       <field name="model">res.partner</field>
       <field name="inherit_id" ref="base.view_partner_form"/>
       <field name="arch" type="xml">
-        <!-- <field name="vat" position="after"> -->
-        <header>
+        <field name="vat" position="after">
           <button name="%(scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/>
-        </header>
-        <!-- </field> -->
+        </field>
       </field>
     </record>
   </data>
