Add more fields and a warn button

--- a/contact_mod/views/views.xml
+++ b/contact_mod/views/views.xml
@@ -8,6 +8,12 @@
         <field name="vat" position="after">
           <field name="medical_id" string="MMM ID"/>
           <field name="medical_expiration" string="MM Exp"/>
+          <field name="date_of_birth" string="DOB"/>
+          <field name="is_over_21" string="21+"/>
+          <button name="warn" string="Issue Warning" />
+        </field>
+        <field name="image_1920" position="before">
+          <widget name="web_ribbon" title="Banned" bg_color="bg-danger" attrs="{'invisible': [('is_banned', '=', False)]}"/>
         </field>
       </field>
     </record>
