add banned field

--- a/contact_mod/views/views.xml
+++ b/contact_mod/views/views.xml
@@ -11,6 +11,7 @@
           <field name="date_of_birth" string="DOB"/>
           <field name="is_over_21" string="21+"/>
           <button name="warn" string="Issue Warning" />
+          <field name="is_banned" invisible="1"/>
         </field>
         <field name="image_1920" position="before">
           <widget name="web_ribbon" title="Banned" bg_color="bg-danger" attrs="{'invisible': [('is_banned', '=', False)]}"/>
