--- a/contact_mod/views/views.xml
+++ b/contact_mod/views/views.xml
@@ -13,9 +13,9 @@
           <button name="warn" string="Issue Warning" />
           <field name="is_banned" invisible="1"/>
           <field name="warnings" invisible="1"/>
-          <div role="img" id="oe_hr_attendance_status" class="fa fa-fw fa-circle o_button_icon" style="color: yellow;" attrs="{'invisible': [('warnings', '<=', '1')]}" aria-label="Warning 1" title="Warning 1"/>
-          <div role="img" id="oe_hr_attendance_status" class="fa fa-fw fa-circle o_button_icon" style="color: yellow;" attrs="{'invisible': [('warnings', '<=', '2')]}" aria-label="Warning 2" title="Warning 2"/>
-          <div role="img" id="oe_hr_attendance_status" class="fa fa-fw fa-circle o_button_icon" style="color: red;" attrs="{'invisible': [('warnings', '<=', '3')]}" aria-label="Warning 3" title="Warning 3"/>
+          <div role="img" id="oe_hr_attendance_status" class="fa fa-fw fa-circle o_button_icon" style="color: yellow;" attrs="{'invisible': [('warnings', '<', '1')]}" aria-label="Warning 1" title="Warning 1"/>
+          <div role="img" id="oe_hr_attendance_status" class="fa fa-fw fa-circle o_button_icon" style="color: yellow;" attrs="{'invisible': [('warnings', '<', '2')]}" aria-label="Warning 2" title="Warning 2"/>
+          <div role="img" id="oe_hr_attendance_status" class="fa fa-fw fa-circle o_button_icon" style="color: red;" attrs="{'invisible': [('warnings', '<', '3')]}" aria-label="Warning 3" title="Warning 3"/>
         </field>
         <field name="image_1920" position="before">
           <widget name="web_ribbon" title="Banned" bg_color="bg-danger" attrs="{'invisible': [('is_banned', '=', False)]}"/>
