--- a/field_kanban/views/views.xml
+++ b/field_kanban/views/views.xml
@@ -5,9 +5,12 @@
       <field name="model">project.task</field>
       <field name="inherit_id" ref="project.view_task_kanban"/>
       <field name="arch" type="xml">
-          <field name="priority" position="before">
+        <xpath expr="/kanban/templates/t/div//div[@class='oe_kanban_content']" position="replace">
+          <!-- <field name="priority" position="before">
               <div>TEXT HERE</div>
-          </field>
+          </field> -->
+          <div>TEST</div>
+        </xpath>
       </field>
     </record>
     <!-- explicit list view definition -->
