--- a/field_kanban/views/views.xml
+++ b/field_kanban/views/views.xml
@@ -6,7 +6,8 @@
       <field name="inherit_id" ref="project.view_task_kanban"/>
       <field name="arch" type="xml">
         <xpath expr="/kanban/templates/t/div//div[@class='oe_kanban_content']" position="after">
-          <a href="www.google.com">TEST</a>
+          <!-- <a href="www.google.com">TEST</a> -->
+          <field name="project_id"/>
         </xpath>
       </field>
     </record>
