--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -41,6 +41,11 @@
           <field name="partner_id" widget="res_partner_many2one"/>
           <!-- </a> -->
         </xpath>
+        <xpath expr="//kanban" position="before">
+          <header>
+            <button name="test" string="Scan" type="object" class="btn btn-primary" />
+          </header>
+        <xpath>
       </field>
     </record>
 
