--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -41,9 +41,10 @@
           <field name="partner_id" widget="res_partner_many2one"/>
           <!-- </a> -->
         </xpath>
-        <!-- <xpath expr="//kanban" position="before">
-          <button name="test" string="Scan" type="object" class="btn btn-primary" />
-        </xpath> -->
+        <xpath expr="/kanban" position="before">
+          <!-- <button name="test" string="Scan" type="object" class="btn btn-primary" /> -->
+          <div>TEST</div>
+        </xpath>
       </field>
     </record>
 
