--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -45,7 +45,7 @@
            <button name="test" string="Scan" type="object" class="btn btn-primary" />
             <div>TEST</div>
         </kanban> -->
-        <field name="partner_id" position="replace"/>
+        <field name="partner_id" position="replace">
           <field name="partner_id" widget="res_partner_many2one"/>
         </field>
       </field>
