--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -48,10 +48,8 @@
       <field name="model">project.task</field>
       <field name="inherit_id" ref="project.view_task_kanban"/>
       <field name="arch" type="xml">
-        <xpath expr="/kanban" position="before">
-          <header>
-            <button name="test" string="Scan DL" type="object" class="btn-primary"/>
-          </header>
+        <xpath expr="/kanban" position="after">
+          <button name="test" string="Scan DL" type="object" class="btn-primary"/>
         </xpath>
       </field>
     </record>
