--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -40,6 +40,7 @@
           <field name="partner_id" widget="res_partner_many2one"/>
           <field name="time_counter" id="timer"/>
           <script async="async">
+          async function run_timer(){
            timer =  document.getElementById("timer");
            seconds = 0;
            while (true){
@@ -47,6 +48,8 @@
              timer.innerHTML = seconds;
              seconds += 1;
            }
+          }
+          run_timer();
           </script>
         </xpath>
       </field>
