--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -54,9 +54,9 @@
              }
              else{
                timer = new Array();
-               span_list =  document.querySelectorAll("span");
+               span_list = document.querySelectorAll("span");
                i=0
-               for (i = 0; i < span_list.length; i++) {
+               for (i = 0; i < 5; i++) {
                    span_list[i].innerHTML = "TEST";
                }
              }
