--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -43,10 +43,13 @@
           defined = false;
           async function run_timer(){
            ticks = 0;
+           span_list = false;
            while (true){
               await new Promise(r => setTimeout(r, 1000));
               timer = new Array();
-              span_list = document.querySelectorAll("span#time_counter");
+              if (!span_list){
+                span_list = document.querySelectorAll("span#time_counter");
+              }
               for (i = 0; i &lt; span_list.length; i++) {
                   minutes = Math.floor(ticks/60);
                   if (minutes &lt; 10){
@@ -70,17 +73,16 @@
       </field>
     </record>
 
-
-    <!-- <record id="view_project_kanban_inherit" model="ir.ui.view">
-      <field name="name">project.task.inherit</field>
-      <field name="model">project.task</field>
-      <field name="inherit_id" ref="project.view_task_kanban"/>
+    <!-- Product Additions -->
+    <record id="product_template_inherit" model="ir.ui.view">
+      <field name="name">product.template.product.form</field>
+      <field name="model">product.template</field>
+      <field name="inherit_id" ref="product.product_template_only_form_view"/>
       <field name="arch" type="xml">
-        <xpath expr="/kanban" position="after">
-          <button name="test" string="Scan DL" type="object" class="btn-primary"/>
-        </xpath>
+        <field name="barcode" position="after">
+          <field name="is_medical" string="Is Medical Product" />
+        </field>
       </field>
-    </record> -->
-
+    </record>
   </data>
 </odoo>
