--- a/LumeSales/wizards/scan_dl.xml
+++ b/LumeSales/wizards/scan_dl.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <form string="Scan Drivers License">
                 <group>
-                    <field name="image" widget="image"/>
+                    <!-- <field name="image" widget="image"/> -->
                     <field name="raw_text"/>
                 </group>
                 <footer>
