--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -15,6 +15,8 @@
           <field name="medical_expiration" string="MM Exp"/>
           <field name="date_of_birth" string="DOB"/>
           <field name="is_over_21" string="21+"/>
+          <field name="drivers_licence_number" string="Drivers #"/>
+          <field name="drivers_licence_expiration" string="DL Expiration"/>
           <button name="warn" string="Issue Warning" type="object" class="btn btn-primary" />
           <field name="is_banned" invisible="1"/>
           <field name="warnings" invisible="1"/>
