--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -49,9 +49,7 @@
       <field name="name">project.task.search.inherit</field>
       <field name="model">project.task</field>
       <field name="inherit_id" ref="project.view_task_search_form"/>
-      <field name="arch" type="xml">
-
-      </field>
+      <field name="arch" type="xml/">
     </record>
 
     <!-- Product Additions -->
