Turn off js timers

--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -41,7 +41,7 @@
         <xpath expr="/kanban/templates/t/div//div[@class='oe_kanban_content']" position="after">
           <field name="partner_id" widget="res_partner_many2one"/>
           <span id="time_counter"></span>
-          <script defer="defer">
+          <!-- <script defer="defer">
           defined = false;
           async function run_timer(){
            ticks = 0;
@@ -70,7 +70,7 @@
             run_timer();
             defined = true;
           }
-          </script>
+          </script> -->
         </xpath>
       </field>
     </record>
