--- a/LumeSales/views/assets.xml
+++ b/LumeSales/views/assets.xml
@@ -3,7 +3,7 @@
         <xpath expr="//script[last()]" position="after"> 
             <!-- place this content after the last script tag -->
             <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
-            <script type="text/javascript" src="../js/demo.js"></script>
+            <script type="text/javascript" src="/LumeSales/js/demo.js"></script>
         </xpath>
     </template>
     </odoo>
