--- a/LumeSales/views/assets.xml
+++ b/LumeSales/views/assets.xml
@@ -4,6 +4,7 @@
             <!-- place this content after the last script tag -->
             <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
             <script type="text/javascript" src="/LumeSales/js/demo.js"></script>
+            <script type="text/javascript" src="/LumeSales/js/unread_messages.js"></script>
         </xpath>
     </template>
     </odoo>
