--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -43,7 +43,7 @@
           <br/>
           <span class="glyphicon glyphicon-envelope"></span>
           <span id="time_counter"></span>
-          <field name="timer_start" widget="timer_timer"/>
+          <field name="timer_start" widget="timer_timer" class="o_field_widget o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold"/>
           <!-- <script defer="defer">
           defined = false;
           async function run_timer(){
