--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -43,10 +43,12 @@
           <br/>
           <span class="glyphicon glyphicon-envelope"></span>
           <span id="time_counter"></span>
-          <field name="timer_start" widget="timer_timer"/>
-          <script defer="defer">
+          <field name="timer_start" widget="timer_timer">
+            <attributes class="o_field_widget o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold"/>
+          </field>
+          <!-- <script defer="defer">
             $("[name='timer_start']").addClass("o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold");
-          </script>
+          </script> -->
           
           <!-- <script defer="defer">
           defined = false;
