--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -44,7 +44,7 @@
           <span class="glyphicon glyphicon-envelope"></span>
           <span id="time_counter"></span>
           <field name="timer_start" widget="timer_timer">
-            <attributes class="o_field_widget o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold"/>
+            <attribute class="o_field_widget o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold"/>
           </field>
           <!-- <script defer="defer">
             $("[name='timer_start']").addClass("o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold");
